# MiniPhotoShop

./: .build.sh.swp  .gitignore  CMakeLists.txt  CMakeLists.txt.example  LICENSE  MiniPhotoShop  MiniPhotoShop.pro  MiniPhotoShop.pro.user.271a25c  MiniPhotoShop_automoc.cpp  README.md  build.sh  ico.rc  imgs.qrc  langs.qrc  object_script.MiniPhotoShop.Debug  object_script.MiniPhotoShop.Release
doc/: Model.md  RayeRen.md  diagrams.vsdx  doc.md  个人心得_马哲.md  整体架构设计.md  设计报告 part3.md  需求文档.md
doc/个人心得/: 个人心得_郭慧钊.md  个人心得_金志华.md  任意_个人心得.md
doc/各模块文档/: Model.md  datastructure.md  view.md  viewmodel.md  设计报告 part3.md
doc/需求文档/: 需求文档.md
release/: MiniPhotoShop
src/: App.cpp  Constants.h  main.cpp
src/Common/: BaseCommand.h  DataStructure.cpp  DataStructure.h  Histogram3c.cpp  Histogram3c.h  Observable.h  Observer.h  Params.h  Pixmap32b.cpp  Pixmap32b.h
src/Model/: Constants.h  DataStructure.h  Layouts.h  Model.cpp  Model.h
src/View/: MainWindows.cpp  MainWindows.h  convolutiondialog.cpp  convolutiondialog.h  convolutiondialog.ui  imagewidget.cpp  imagewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcanvasdialog.cpp  newcanvasdialog.h  newcanvasdialog.ui  newcanvaswidget.ui  statemanager.cpp  statemanager.h
src/View/States - 副本/: BaseState.h  drawellipseinitstate.h  drawellipsestate.h  drawlineinitstate.h  drawlinestate.h  drawrectinitstate.h  drawrectstate.h  initstate.h  moveinitstate.h  movestate.h  rotateinitstate.h  rotatestate.h  scaleinitstate.h  scalestate.h  statecommonaction.cpp  statecommonaction.h
src/ViewModel/: ViewModel.cpp  ViewModel.h
(+42 files in other folders)
